@@ -3,10 +3,10 @@
                "http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
 
 <!ENTITY ccss				SYSTEM "xml/ccss.xml">
+<!ENTITY ccss_function_t		SYSTEM "xml/function.xml">
 <!ENTITY ccss_node_t			SYSTEM "xml/node.xml">
 <!ENTITY ccss_style_t			SYSTEM "xml/style.xml">
 <!ENTITY ccss_stylesheet_t		SYSTEM "xml/stylesheet.xml">
-<!ENTITY ccss_selector_group_t		SYSTEM "xml/selector_group.xml">
 
 <!ENTITY ccss_gtk_style_functions	SYSTEM "xml/ccss_gtk_style_functions.xml">
 
@@ -100,10 +100,10 @@ TODO.
   <chapter id="basic">
     <title>Basic Usage</title>
     &ccss;
-    &ccss_stylesheet_t;
-    &ccss_selector_group_t;
-    &ccss_style_t;
+    &ccss_function_t;
     &ccss_node_t;
+    &ccss_stylesheet_t;
+    &ccss_style_t;
   </chapter>
   <chapter id="gtk-support">
     <title>Gtk+ Support</title>
