@@ -1,0 +1,38 @@
+<!-- ##### SECTION Title ##### -->
+ccss_function_t
+
+<!-- ##### SECTION Short_Description ##### -->
+
+
+<!-- ##### SECTION Long_Description ##### -->
+<para>
+
+</para>
+
+
+<!-- ##### SECTION See_Also ##### -->
+<para>
+
+</para>
+
+
+<!-- ##### SECTION Stability_Level ##### -->
+
+
+<!-- ##### USER_FUNCTION ccss_function_f ##### -->
+<para>
+
+</para>
+
+@args: 
+@Returns: 
+
+
+<!-- ##### STRUCT ccss_function_t ##### -->
+<para>
+
+</para>
+
+@name: 
+@function: 
+
